<resources>
    <string name="app_name">Distance Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="continue_text">Continue</string>
    <string name="description_text">Welcome to Distance Tracker. We will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue, tap on the button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="tap_on_my_location_button">Tap on My Location Button.</string>
    <string name="_3">3</string>
    <string name="distance">Distance</string>
    <string name="_0_00km">0.00 km</string>
    <string name="time">Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
</resources>